--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     buildToolsVersion "29.0.3"
     defaultConfig {
         applicationId "com.example.capstone_elibrary"
-        minSdkVersion 21
+        minSdkVersion 23
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -24,10 +24,19 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.firebase:firebase-auth:16.0.5'
+    implementation 'com.google.firebase:firebase-auth:19.3.0'
+    implementation 'com.google.firebase:firebase-firestore:21.4.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'de.hdodenhof:circleimageview:3.0.1'
+
+    implementation 'com.codepath.libraries:asynchttpclient:0.0.8'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+
+    implementation 'com.loopj.android:android-async-http:1.4.9'
+    implementation 'com.google.firebase:firebase-core:17.2.2'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'com.firebaseui:firebase-ui-firestore:4.1.0'
 }
