--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AddNote"></activity>
-        <activity android:name=".EditNote" />
-        <activity android:name=".NoteDetails" />
+        <activity android:name=".AddNote"
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".EditNote"
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".NoteDetails"
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity android:name=".RegisterActivity" />
         <activity android:name=".LoginActivity">
             <intent-filter>
