--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,23 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.capstone_elibrary">
+    package="com.example.capstone_elibrary"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:versionCode="1"
+    android:versionName="1.0">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
+        android:name=".EBookApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".AddNote"
-            android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".EditNote"
-            android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".NoteDetails"
-            android:theme="@style/AppTheme.NoActionBar"/>
+        android:theme="@style/AppTheme"
+
+        tools:ignore="GoogleAppIndexingWarning">
+
+        <activity android:name=".BookReader"></activity>
+        <activity
+            android:name=".AddNote"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".EditNote"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".NoteDetails"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".LoginActivity">
             <intent-filter>
@@ -32,6 +44,7 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
     </application>
 
