--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.capstone_elibrary"
     xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.capstone_elibrary"
     android:versionCode="1"
     android:versionName="1.0">
 
@@ -17,10 +17,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-
         tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".SplashScreen"
+            android:theme="@style/AppThemeSplash">
 
-        <activity android:name=".BookReader"></activity>
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+        </activity>
+        <activity android:name=".BookReader" />
         <activity
             android:name=".AddNote"
             android:theme="@style/AppTheme.NoActionBar" />
@@ -44,7 +52,6 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
     </application>
 
